# mpy-triage

./: .gitattributes  .gitignore  BRANCH_REVIEW.md  CLAUDE.md  MPY_TRIAGE_SPEC.md  pyproject.toml  scan_report.json  schema.sql
.claude-plugin/: plugin.json
commands/: mpy-triage.md
data/: eval_gemma_comparison.json  eval_gemma_think_comparison.json  eval_qwen_vs_sonnet.json  scan_results.csv  scan_results.html  scan_results.md  triage.db
docs/: architecture.md  database.md  deployment.md  investigation-log.md  model-comparison-report.md  model-comparison.md  usage.md
prompts/: assess.txt  eval_judge.txt  summarize.txt
scripts/: run_assess_local.py  run_assess_scan.py  run_gemma_comparison.py  run_rerank_scan.py  run_scan.py  run_sonnet_validation.py  setup-llama-server.sh  validate_qwen_vs_sonnet.py
skills/triage/: SKILL.md
src/mpy_triage/: __init__.py  assemble.py  assess.py  cli.py  collect.py  config.py  crossref.py  db.py  embed.py  eval.py  export.py  format.py  gh.py  render.py  scan.py  search.py  summarize.py
tests/: conftest.py  test_assemble.py  test_assess.py  test_collect.py  test_crossref.py  test_db.py  test_embed.py  test_eval.py  test_format.py  test_gh.py  test_search.py  test_summarize.py
